// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML normalize addElement should add an element with differing contextStack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "name": "Vortex",
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": undefined,
        "render": Array [
          "Vortex!",
        ],
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "ABC",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize addElement should add an element with matching contextStack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
        "name": "Vortex",
        "render": Array [
          "Vortex!",
        ],
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize addElement should add an element with unspecified indices in the context-stack 1`] = `
Object {
  "ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC#DEF",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "name": "Vortex",
      },
    ],
    "key": "ABC",
    "tag": "Room",
  },
  "ABC#DEF": Object {
    "appearances": Array [
      Object {
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
        ],
      },
    ],
    "key": "ABC#DEF",
    "tag": "Exit",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "DEF",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
      },
    ],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "DEF": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "DEF#ABC",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "DEF",
    "tag": "Room",
  },
  "DEF#ABC": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "DEF",
            "tag": "Room",
          },
        ],
        "location": undefined,
      },
    ],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ABC",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize postProcessAppearance should aggregate locations into Map rooms 1`] = `
Object {
  "TestAsset": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "TestAsset",
    "tag": "Asset",
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "welcomeRoom",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "VORTEX",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "rooms": Object {
          "VORTEX": Object {
            "location": Array [
              0,
              0,
              1,
            ],
            "x": 0,
            "y": 0,
          },
          "welcomeRoom": Object {
            "location": Array [
              0,
              0,
              0,
            ],
            "x": 0,
            "y": 100,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "VORTEX": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
        "x": 0,
        "y": 0,
      },
    ],
    "key": "VORTEX",
    "tag": "Room",
  },
  "welcomeRoom": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "TestAsset",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
        "x": 0,
        "y": 100,
      },
    ],
    "key": "welcomeRoom",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should accumulate multiple appearances of the same key 1`] = `
Object {
  "123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": "Vortex",
        "render": Array [
          "Hello, world!",
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
        "render": Array [
          "Vortex!",
        ],
      },
    ],
    "key": "123",
    "tag": "Room",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "dependencies": Array [],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize should create wrapping elements for exits where needed 1`] = `
Object {
  "123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
      },
    ],
    "key": "123",
    "tag": "Room",
  },
  "456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "456#123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "456",
    "tag": "Room",
  },
  "456#123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "456",
    "key": "456#123",
    "tag": "Exit",
    "to": "123",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize should denormalize condition dependencies into contextStack 1`] = `
Object {
  "123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
        "render": Array [
          "Hello, world!",
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
        "render": Array [
          "Vortex!",
        ],
      },
    ],
    "key": "123",
    "tag": "Room",
  },
  "Condition-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "Condition-0",
    "tag": "Condition",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "Condition-0",
            "tag": "Condition",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should normalize a character asset 1`] = `
Object {
  "TESS": Object {
    "FirstImpression": "Frumpy Goth",
    "Name": "Tess",
    "OneCoolThing": "Fuchsia eyes",
    "Outfit": "A battered hoodie trimmed with lace",
    "Pronouns": Object {
      "adjective": "hers",
      "objective": "her",
      "possessive": "her",
      "reflexive": "herself",
      "subjective": "she",
    },
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "test.wml",
    "fileURL": "testIcon.png",
    "key": "TESS",
    "tag": "Character",
    "zone": "Library",
  },
}
`;

exports[`WML normalize should normalize every needed tag 1`] = `
Object {
  "123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "clockTower",
            "tag": "Feature",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": "Vortex",
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          1,
        ],
      },
    ],
    "key": "123",
    "tag": "Room",
  },
  "456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "456#123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": undefined,
      },
    ],
    "key": "456",
    "tag": "Room",
  },
  "456#123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
      },
    ],
    "from": "456",
    "key": "456#123",
    "tag": "Exit",
    "to": "123",
  },
  "ImageTest": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
      },
    ],
    "fileURL": "https://test.com/imageTest.png",
    "key": "ImageTest",
    "tag": "Image",
  },
  "Import-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "power",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "overview",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "props": Object {},
      },
    ],
    "from": "BASE",
    "key": "Import-0",
    "mapping": Object {
      "overview": Object {
        "key": "overview",
        "type": "Room",
      },
      "power": Object {
        "key": "basePower",
        "type": "Variable",
      },
    },
    "tag": "Import",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
          Object {
            "index": 1,
            "key": "clockTower",
            "tag": "Feature",
          },
          Object {
            "index": 0,
            "key": "active",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "inactive",
            "tag": "Computed",
          },
          Object {
            "index": 0,
            "key": "toggleActive",
            "tag": "Action",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ImageTest",
            "tag": "Image",
          },
          Object {
            "index": 1,
            "key": "123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
        "rooms": Object {
          "123": Object {
            "location": Array [
              0,
              2,
              1,
            ],
            "x": 200,
            "y": 150,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "active": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          4,
        ],
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          1,
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          3,
        ],
      },
    ],
    "key": "clockTower",
    "name": "Clock Tower",
    "tag": "Feature",
  },
  "inactive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          5,
        ],
      },
    ],
    "dependencies": Array [
      "active",
    ],
    "key": "inactive",
    "src": "!active",
    "tag": "Computed",
  },
  "overview": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
      },
    ],
    "key": "overview",
    "tag": "Room",
  },
  "power": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "key": "power",
    "tag": "Variable",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          6,
        ],
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
}
`;

exports[`WML normalize should normalize exits into their parent room where needed 1`] = `
Object {
  "123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "123#456",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": "Vortex",
      },
    ],
    "key": "123",
    "tag": "Room",
  },
  "123#456": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "123",
    "key": "123#456",
    "tag": "Exit",
    "to": "456",
  },
  "456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "456#123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
        "name": "Welcome",
      },
    ],
    "key": "456",
    "tag": "Room",
  },
  "456#123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "from": "456",
    "key": "456#123",
    "tag": "Exit",
    "to": "123",
  },
  "Test": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`WML normalize transformNode should pass a global exit in a room wrapper, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass a local from exit at same level, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "index": 0,
      "key": "ABC",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "ABC",
    "key": "ABC#DEF",
    "tag": "Exit",
    "to": "DEF",
  },
}
`;

exports[`WML normalize transformNode should pass a local from exit at same level, with synthetic key 2`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "index": 0,
      "key": "ABC",
      "tag": "Room",
    },
    Object {
      "index": 0,
      "key": "Condition-0",
      "tag": "Condition",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "ABC",
    "key": "ABC#DEF",
    "tag": "Exit",
    "to": "DEF",
  },
}
`;

exports[`WML normalize transformNode should pass a local to exit in a sibling room wrapper, with synthetic key 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass a local to exit in a sibling room wrapper, with synthetic key 2`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
    Object {
      "key": "DEF",
      "tag": "Room",
    },
    Object {
      "key": "Condition-0",
      "tag": "Condition",
    },
  ],
  "node": Object {
    "contents": Array [],
    "from": "DEF",
    "key": "DEF#ABC",
    "tag": "Exit",
    "to": "ABC",
  },
}
`;

exports[`WML normalize transformNode should pass room key unchanged 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
  ],
  "node": Object {
    "contents": Array [],
    "key": "ABC",
    "name": "Vortex",
    "tag": "Room",
  },
}
`;

exports[`WML normalize transformNode should synthesize a key for condition tag 1`] = `
Object {
  "contextStack": Array [
    Object {
      "index": 0,
      "key": "Test",
      "tag": "Asset",
    },
  ],
  "node": Object {
    "contents": Array [],
    "if": "true",
    "key": "Condition-0",
    "tag": "Condition",
  },
}
`;
